# shiprace

./: .gitignore  BuoyantEntity.cpp  BuoyantEntity.h  CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  GerstnerWater.cpp  GerstnerWater.h  Mesh.cpp  Mesh.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sky.cpp  Sky.h  TextureLoader.cpp  TextureLoader.h  Water.cpp  Water.h  main.cpp
Assets/buoy/: Buoy.pz3  Readme.txt
Shader/: ppl.frag  ppl.vert  sky.frag  sky.frag~  water.frag  water.frag~  water.vert  water.vert~
